Fix: api get product visible with filter, api get order by phase status